--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.slim.js"></script>
     <link rel="stylesheet" href="./assets/index.css" />
+    <link rel="stylesheet" href="./assets/mobile.css" />
   </head>
   <body>
     <div id="mapContainer">
