add favicon & add locate button

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <meta property="og:image" content="https://qazwsx9006.github.io/mask/assets/metaImage.jpg"></meta>
     <meta property="og:description" content="協助找口罩"></meta>
     <meta property="og:site_name" content="口罩幫手"></meta>
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/images/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/images/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <title>口罩幫手</title>
     <link
       rel="stylesheet"
@@ -34,10 +38,12 @@
     </div>
     <div id="dashboard">
       <div id="info">
-        <div class="button logo">logo</div>
+        <div class="button logo">
+          <a href="/mask"><img src="./assets/images/mask.png" alt="logo"></a>
+        </div>
         <div class="button info">消息</div>
         <div class="button search" id="search">搜尋</div>
-        <div class="button about">關於</div>
+        <div class="button locate" id="locate">定位</div>
       </div>
 
       <div id="listContainer">
