--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
     <div id="dashboard">
       <div id="info">
         <div class="button logo">
-          <a href="/mask"><img src="./assets/images/mask.png" alt="logo"></a>
+          <a href="javascript:toggleAbout();"><img src="./assets/images/mask.png" alt="logo"></a>
         </div>
-        <div class="button info">消息</div>
+        <div class="button news" id="news">消息</div>
         <div class="button search" id="search">搜尋</div>
         <div class="button locate" id="locate">定位</div>
       </div>
@@ -69,6 +69,16 @@
             </div>
           </li>
         </ul>
+      </div>
+    </div>
+    <div id="about">
+      <div class="container">
+        <div id="close">Ｘ</div>
+        <h5>關於本站</h5>
+        <p>
+          開發者： <a href="https://www.facebook.com/qazwsx9006">Ming Yu Tseng</a>、<a href="https://www.facebook.com/hsienchung.lin.9">Hsien Chung Lin</a> <br/>
+          資料來源： <a href="https://data.nhi.gov.tw/">健康保險資料開放服務</a>、<a href="https://github.com/WJWang/mask-help-info-api/issues/2">mask-help-info-api</a>
+        </p>
       </div>
     </div>
   </body>
