--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div id="dashboard">
       <div id="info">
         <div class="button logo">
-          <a href="javascript:toggleAbout();"><img src="./assets/images/mask.png" alt="logo"></a>
+          <a href="javascript:;" id="logo"><img src="./assets/images/mask.png" alt="logo"></a>
         </div>
         <div class="button news" id="news">消息</div>
         <div class="button search" id="search">搜尋</div>
