--- a/index.html
+++ b/index.html
@@ -91,6 +91,22 @@
         </p>
       </div>
     </div>
+
+    <div id="note">
+      <div class="noteContainer">
+        <div id="closeNote">Ｘ</div>
+        <h5>本日購買資格為身分證字號尾數：</h5>
+        <h4 id="condition">
+          <!-- 偶數 <span>(0,2,4,6,8)</span> -->
+        </h4>
+        <p>
+          ℹ️ 部分藥局因採發放號碼牌方式，方便民眾購買口罩，<b>系統目前無法顯示已發送號碼牌數量</b>。<br/>
+          ℹ️ 口罩數量以藥局實際存量為主，<b>線上查詢之數量僅供參考</b>。<br/>
+          ℹ️ 若您的藥局有需要加註的公告事項，可以填寫表單： <a href="https://pse.is/KH7DC">https://pse.is/KH7DC</a>
+        </p>
+      </div>
+    </div>
+
   </body>
   <script src="./assets/map.js"></script>
 </html>
