--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
           <li data-id="5901012203">
             <h6>
               載入中
-              <span>更新時間：......</span>
+              <!-- <span class="tag">號碼牌</span> -->
+              <span class="updatedAt">更新時間：......</span>
             </h6>
             <div class="maskCountBox">
               <div class="maskCountColumn">
