--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <h5>關於本站</h5>
         <p>
           開發者： <a href="https://www.facebook.com/qazwsx9006">Ming Yu Tseng</a>、<a href="https://www.facebook.com/hsienchung.lin.9">Hsien Chung Lin</a> <br/>
-          資料來源： <a href="https://data.nhi.gov.tw/">健康保險資料開放服務</a>、<a href="https://github.com/WJWang/mask-help-info-api/issues/2">mask-help-info-api</a>
+          資料來源： <a href="https://data.nhi.gov.tw/">健康保險資料開放服務</a>、<a href="https://github.com/WJWang/mask-help-info-api/issues/2">mask-help-info-api</a>、<a href="https://raw.githubusercontent.com/kiang/pharmacies/master/json/points.json">藥局+衛生所即時庫存 geojson by kiang</a>
         </p>
       </div>
     </div>
@@ -104,6 +104,7 @@
           ℹ️ 部分藥局因採發放號碼牌方式，方便民眾購買口罩，<b>系統目前無法顯示已發送號碼牌數量</b>。<br/>
           ℹ️ 口罩數量以藥局實際存量為主，<b>線上查詢之數量僅供參考</b>。<br/>
           ℹ️ 若您的藥局有需要加註的公告事項，可以填寫表單： <a href="https://pse.is/KH7DC">https://pse.is/KH7DC</a>
+          ℹ️ 填寫的資料會不定期匯出到 <a href="https://pse.is/QDSMW">https://pse.is/QDSMW</a>
         </p>
       </div>
     </div>
