--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <p>
           ℹ️ 部分藥局因採發放號碼牌方式，方便民眾購買口罩，<b>系統目前無法顯示已發送號碼牌數量</b>。<br/>
           ℹ️ 口罩數量以藥局實際存量為主，<b>線上查詢之數量僅供參考</b>。<br/>
-          ℹ️ 若您的藥局有需要加註的公告事項，可以填寫表單： <a href="https://pse.is/KH7DC">https://pse.is/KH7DC</a>
+          ℹ️ 若您的藥局有需要加註的公告事項，可以填寫表單： <a href="https://pse.is/KH7DC">https://pse.is/KH7DC</a><br/>
           ℹ️ 填寫的資料會不定期匯出到 <a href="https://pse.is/QDSMW">https://pse.is/QDSMW</a>
         </p>
       </div>
