--- a/index.html
+++ b/index.html
@@ -67,15 +67,19 @@
             <div class="maskCountBox">
               <div class="maskCountColumn">
                 成人口罩
-                <div class="maskCount">
+                <div class="maskCount" style="font-size:2.2rem;">
                   載入中
                 </div>
               </div>
               <div class="maskCountColumn">
                 幼兒口罩
-                <div class="maskCount">
+                <div class="maskCount" style="font-size:2.2rem;">
                   載入中
                 </div>
+              </div>
+              <div class="maskCountColumn saleLog">
+                10分鐘內銷售
+                <div class="maskCount"></div>
               </div>
             </div>
           </li>
