--- a/index.html
+++ b/index.html
@@ -104,12 +104,15 @@
         <h4 id="condition">
           <!-- 偶數 <span>(0,2,4,6,8)</span> -->
         </h4>
-        <p>
+        <div class="content">
           ℹ️ 部分藥局因採發放號碼牌方式，方便民眾購買口罩，<b>系統目前無法顯示已發送號碼牌數量</b>。<br/>
           ℹ️ 口罩數量以藥局實際存量為主，<b>線上查詢之數量僅供參考</b>。<br/>
-          ℹ️ 若您的藥局有需要加註的公告事項，可以填寫表單： <a href="https://pse.is/KH7DC">https://pse.is/KH7DC</a><br/>
-          ℹ️ 填寫的資料會不定期匯出到 <a href="https://pse.is/QDSMW">https://pse.is/QDSMW</a>
-        </p>
+          ℹ️ 如果藥局的庫存或者備住有誤，可以禮貌提醒藥師確認系統資料：
+          <ul>
+            <li>庫存的部份，可請藥師瀏覽「防疫口罩管控系統VPN登錄作業使用者手冊」的第五頁，有說明負數的操作方式。</li>
+            <li>備註的部份，可請藥師一樣連線至 VPN 後進入「看診資料及掛號費」：(1)每日固定看診時段 (2)「固定看診時段備註欄」，可修正藥局販賣口罩起迄時間及相關欲通知民眾事項。</li>
+          </ul>
+        </div>
       </div>
     </div>
 
@@ -118,16 +121,18 @@
         <div id="closeNews" class="close">Ｘ</div>
         <ul class="msgWindow">
           <li style="height:1rem;"></li>
-          <!-- <li>
+          <li>
             <div class="avatar">
               幫手
             </div>
             <div class="msgBubble">
               <div class="bubble">
-                <img src="" alt="">
+                <span class="msg">
+                  販賣口罩的藥師志工們都很辛苦，感謝都來不及了！請不要因為一時情緒而欺負這些偉大的人喔。❤️❤️❤️
+                </span>
               </div>
             </div>
-          </li> -->
+          </li>
           
         </ul>
       </div>
@@ -138,6 +143,7 @@
   <script>
     // https://imgur.com/a/CKt17ce
     imageLists = [
+      'https://i.imgur.com/7ZSglpc.jpg',
       'https://i.imgur.com/EckthZB.png',
       'https://i.imgur.com/cP2ru0G.jpg',
       'https://i.imgur.com/QNl3Yh7.jpg',
