--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <div class="msgBubble">
               <div class="bubble">
                 <span class="msg">
-                  販賣口罩的藥師志工們都很辛苦！請不要因為一時情緒而欺負他們喔。❤️❤️❤️
+                  販賣口罩的藥師志工們都很辛苦！請不要因為一時情緒而責備他們喔。❤️❤️❤️
                 </span>
               </div>
             </div>
