--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="button logo">
           <a href="javascript:;" id="logo"><img src="./assets/images/mask.png" alt="logo"></a>
         </div>
-        <div class="button news" id="newsList">消息</div>
+        <div class="button news" id="newsList"><span><i class="tipLight close"></i>消息</span></div>
         <div class="button search" id="search">搜尋</div>
         <div class="button locate" id="locate">定位</div>
       </div>
@@ -164,6 +164,16 @@
           </li>`
       $('.msgWindow').append(li)
     }
+    const latestNewsId = '1583578279307'
+    const latestSeenNews = localStorage.getItem('qazwsx9006Mask')
+    if(!latestSeenNews || latestSeenNews != latestNewsId){
+      $('#newsList .tipLight').removeClass('close')
+    }
+    $("#newsList").on("click", function() {
+      $("#news").show();
+      localStorage.setItem('qazwsx9006Mask', latestNewsId)
+      $('#newsList .tipLight').addClass('close')
+    });
     
 
   </script>
