--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
         <div class="content">
           ℹ️ 部分藥局因採發放號碼牌方式，方便民眾購買口罩，<b>系統目前無法顯示已發送號碼牌數量</b>。<br/>
           ℹ️ 口罩數量以藥局實際存量為主，<b>線上查詢之數量僅供參考</b>。<br/>
-          ℹ️ 如果藥局的庫存或者備住有誤，可以禮貌提醒藥師確認系統資料：
+          ℹ️ 如果藥局的庫存或者備註有誤，可以禮貌提醒藥師確認系統資料：
           <ul>
-            <li>庫存的部份，可請藥師瀏覽「防疫口罩管控系統VPN登錄作業使用者手冊」的第五頁，有說明負數的操作方式。</li>
-            <li>備註的部份，可請藥師一樣連線至 VPN 後進入「看診資料及掛號費」：(1)每日固定看診時段 (2)「固定看診時段備註欄」，可修正藥局販賣口罩起迄時間及相關欲通知民眾事項。</li>
+            <li>庫存的部份，可請藥師瀏覽「<a href="http://ws.nhi.gov.tw/Download.ashx?u=LzAwMS9VcGxvYWQvMjkyL2NrZmlsZS9mYmUzNWVmZC0zMDkyLTRjNWEtOTAyZi0zMDIxN2I0YzYyMWQucGRm&n=MTA5MDIwNiBVc2VyR3VpZGVfUVA1X3YzLjAucGRm&icon=.pdf">防疫口罩管控系統VPN登錄作業使用者手冊</a>」的第五頁，有說明負數的操作方式。</li>
+            <li>備註的部份，可請藥師一樣連線至 VPN 後進入「<a href="http://bit.ly/2ScrpB6">看診資料及掛號費</a>」：(1)每日固定看診時段 (2)「固定看診時段備註欄」，可修正藥局販賣口罩起迄時間及相關欲通知民眾事項。</li>
           </ul>
         </div>
       </div>
