--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
     </div>
     <style>
       #error{
+        display: none;
         color:#f00;
         position: absolute;
         top: 0;
