--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
     <div id="error">
       <span>
-        資料來源主機故障中！！！待修復後將會盡快重新更新資訊！！
+        主機故障中！！！待修復後將會盡快重新更新資訊！！
       </span>
     </div>
     <style>
