--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
     <div id="note">
       <div class="noteContainer">
         <div id="closeNote">Ｘ</div>
-        <h5>本日購買資格為身分證字號尾數：</h5>
+        <!-- <h5>本日購買資格為身分證字號尾數：</h5> -->
+        <h5>4/9日開始不分單雙號：</h5>
         <h4 id="condition">
           <!-- 偶數 <span>(0,2,4,6,8)</span> -->
         </h4>
