remove backend code.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="./assets/images/favicon_io/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon_io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./assets/images/favicon_io/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+    <!-- <link rel="manifest" href="/site.webmanifest"> -->
     <title>口罩幫手</title>
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
     <link
